# datetypes

./: .editorconfig  README.md  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: release.yml
src/datetypes/: __init__.py  __init__.pyi
tests/: test_basic.py  test_datetime.py  test_datetypes.py  test_pydantic.py
